# Hybrid-computing-systems

./: .gitignore  README.md
Hybrid-computing-systems/: CMakeLists.txt  Hybrid-computing-systems.sln  build.sh  run.sh
Hybrid-computing-systems/Core/: CMakeLists.txt  Core.vcxproj
Hybrid-computing-systems/Core/include/: CPU_operations.h  Core.cuh  Core.h  cuda_operations.h
Hybrid-computing-systems/Core/src/: CPU_operations.cpp  Core.cu  cuda_operations.cu
Hybrid-computing-systems/benchmark/: CMakeLists.txt  benchmark.vcxproj
Hybrid-computing-systems/benchmarks/: CMakeLists.txt  benchmark.vcxproj.filters
Hybrid-computing-systems/benchmarks/src/: benchmark_main.cpp
Hybrid-computing-systems/cmake/configs/: cuda_arch.cmake
Hybrid-computing-systems/plots/: main.py
Hybrid-computing-systems/plots/benchmarks_data/: results.json
Hybrid-computing-systems/tests/: CMakeLists.txt  tests.vcxproj
Hybrid-computing-systems/tests/src/: test_main.cpp  test_main.cu
Hybrid-computing-systems/tests/x64/Debug/: tests.exe.recipe  tests.vcxproj.FileListAbsolute.txt
Hybrid-computing-systems/tests/x64/Debug/tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  tests.lastbuildstate
Hybrid-computing-systems/x64/Debug/: XMLGoogleTestResults.xml  tests.exe.gta.testdurations
